# romeo_action

./: CMakeLists.txt  package.xml
include/romeo_pick_place/: action.hpp  actionclient.hpp  actions.hpp  custom_environment5.hpp  grasp_filter.hpp  metablock.hpp  objprocessing.hpp  postures.hpp  simplepickplace.hpp  tools.hpp
launch/: block_pick_place_adv_.launch  pick_place_adv_nao.launch  pick_place_adv_romeo.launch
src/: action.cpp  actionclient.cpp  actions.cpp  block_pick_place.cpp  grasp_filter.cpp  main.cpp  metablock.cpp  objprocessing.cpp  postures.cpp  simplepickplace.cpp
