<package>
  <name>pick_place_moveit</name>
  <version>0.3.0</version>
  <description>Code for running MoveIt pick and place</description>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
  <maintainer email="natalia.lyubova@gmail.com">Natalia Lyubova</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/baxter_cpp/</url>
  <url type="bugtracker">https://github.com/davetcoleman/baxter_cpp/issues</url>
  <url type="repository">https://github.com/davetcoleman/baxter</url>

  <author>Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_simple_grasps</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_planners</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_plugins</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend>
  <run_depend>moveit_simple_grasps</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>actionlib</run_depend>

  <export>
  </export>
</package>
